<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>com.paypal.risk.identity</groupId>
        <artifactId>rda-utils</artifactId>
        <version>1.209.7-p241-SNAPSHOT</version>
        
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>rda-util-test</artifactId>
    <packaging>jar</packaging>
    <description>
        RDA Cache Util client code
    </description>

    <developers>
        <developer>
            <id>rda</id>
            <name>RDA</name>
            <email>DL-PP-Risk-Data-Acquisition@paypal.com</email>
            <organization>Paypal</organization>
            <organizationUrl>http://www.paypal.com</organizationUrl>
        </developer>
        <developer>
            <id>anprakash</id>
            <name>Anand Prakash</name>
            <email>anprakash@paypal.com</email>
            <organization>Paypal</organization>
            <organizationUrl>http://www.paypal.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <developerConnection>scm:git:https://github.paypal.com/Risk-R/rda-java-client.git</developerConnection>
        <connection>git@github.paypal.com:Risk-R/rda-java-client.git</connection>
        <url>https://github.paypal.com/Risk-R/rda-java-client</url>
    </scm>
     <properties>
        <enterprise.interface.version>1.208.25015460</enterprise.interface.version>
        <enterprise.interface.version.raptor>3.208.25346834</enterprise.interface.version.raptor>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.7.1</version>
                <configuration>
                    <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=256m -XX:-UseSplitVerifier -noverify</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
         <profile>
            <id>raptor</id>
            <distributionManagement>
                <repository>
                    <id>raptor.releases</id>
                    <uniqueVersion>true</uniqueVersion>
                    <url>https://paypalcentral.es.paypalcorp.com/nexus/content/repositories/releases/</url>
                </repository>
                <snapshotRepository>
                    <id>raptor.snapshots</id>
                    <url>https://paypalcentral.es.paypalcorp.com/nexus/content/repositories/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
            <dependencies>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>RiskClientDataEvents-interface</artifactId>
                    <version>${enterprise.interface.version.raptor}</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>DysonVO-interface</artifactId>
                    <version>${enterprise.interface.version.raptor}</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>PaymentAttemptVO-interface</artifactId>
                    <version>${enterprise.interface.version.raptor}</version>
                </dependency>
                <!--<dependency>
                    <groupId>com.paypal.risk.identity</groupId>
                    <artifactId>rcmd-protobuf-schema</artifactId>
                    <version>3.206.8-p261</version>
                    <scope>provided</scope>
                </dependency>-->
                <dependency>
                    <groupId>com.paypal.risk.identity</groupId>
                    <artifactId>rcmd-protobuf-schema</artifactId>
                    <version>3.206.3-p241</version>
                </dependency>
                <dependency>
                    <groupId>org.powermock</groupId>
                    <artifactId>powermock-module-junit4</artifactId>
                    <version>1.5.1</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.rtdp.rtds</groupId>
                    <artifactId>realtimedataserv-client</artifactId>
                    <version>1.4.6</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.powermock</groupId>
                    <artifactId>powermock-api-mockito</artifactId>
                    <scope>test</scope>
                    <version>1.5.1</version>
                </dependency>
                <dependency>
                    <groupId>org.mockito</groupId>
                    <artifactId>mockito-all</artifactId>
                    <version>1.9.5</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>net.sf.json-lib</groupId>
                    <artifactId>json-lib</artifactId>
                    <version>2.4</version>
                    <classifier>jdk15</classifier>
                </dependency>
                <dependency>
                    <groupId>com.paypal.usf</groupId>
                    <artifactId>vo</artifactId>
                    <version>1.0.4-RELEASE</version>
                </dependency>
                <dependency>
                    <groupId>cglib</groupId>
                    <artifactId>cglib-nodep</artifactId>
                    <version>2.2</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-transports-http-hc</artifactId>
                    <version>3.1.6</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-rs-client</artifactId>
                    <version>3.1.6</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.fasterxml.jackson.jaxrs</groupId>
                    <artifactId>jackson-jaxrs-json-provider</artifactId>
                    <version>2.0.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.glassfish.jersey.core</groupId>
                    <artifactId>jersey-client</artifactId>
                    <version>2.7</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.rtdp.rtds</groupId>
                    <artifactId>realtimedataserv-message-providers-raptor-p241</artifactId>
                    <version>1.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.risk.identity</groupId>
                    <artifactId>rda-reader</artifactId>
                    <version>${project.version}</version>
                </dependency>
                <dependency>
					  <groupId>com.paypal.rti</groupId>
					  <artifactId>RTITestUtils</artifactId>
					  <version>0.0.15-SNAPSHOT</version>
				</dependency>
				<dependency>
					  <groupId>com.paypal.risk.identity</groupId>
					  <artifactId>utils</artifactId>
					  <version>3.3.19</version>
				</dependency>
				<dependency>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
					<version>6.8.7</version>
				</dependency>
            </dependencies>
        </profile>
        <profile>
            <id>helix</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>releases</id>
                    <uniqueVersion>true</uniqueVersion>
                    <url>http://nexus.paypal.com/nexus/content/repositories/releases/</url>
                </repository>
                <snapshotRepository>
                    <id>snapshot</id>
                    <uniqueVersion>false</uniqueVersion>
                    <url>http://nexus.paypal.com/nexus/content/repositories/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
            <dependencies>
                <dependency>
                    <groupId>com.paypal.risk.identity</groupId>
                    <artifactId>rcmd-protobuf-schema</artifactId>
                    <version>1.209.2</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.risk.idi</groupId>
                    <artifactId>idi-proto-schema-p241</artifactId>
                    <version>1.0.0</version>
                </dependency>
                <dependency>
                    <groupId>org.powermock</groupId>
                    <artifactId>powermock-module-junit4</artifactId>
                    <version>1.5.1</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.rtdp.rtds</groupId>
                    <artifactId>realtimedataserv-client</artifactId>
                    <version>1.4.6ns</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.rtdp.basic</groupId>
                    <artifactId>rtdp-basic-api-p241</artifactId>
                    <version>1.5</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>RiskClientDataEvents-interface</artifactId>
                    <version>${enterprise.interface.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>DysonVO-interface</artifactId>
                    <version>${enterprise.interface.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.paypal.interfaces</groupId>
                    <artifactId>PaymentAttemptVO-interface</artifactId>
                    <version>${enterprise.interface.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.powermock</groupId>
                    <artifactId>powermock-api-mockito</artifactId>
                    <scope>test</scope>
                    <version>1.5.1</version>
                </dependency>
                <dependency>
                    <groupId>org.mockito</groupId>
                    <artifactId>mockito-all</artifactId>
                    <version>1.9.5</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>net.sf.json-lib</groupId>
                    <artifactId>json-lib</artifactId>
                    <version>2.4</version>
                    <classifier>jdk15</classifier>
                </dependency>
                <dependency>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                    <version>3.0.0</version>
                    <scope>test</scope>
                </dependency>
               <!--  <dependency>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-transports-http-hc</artifactId>
                    <version>3.0.0</version>
                    <scope>test</scope>
                </dependency> -->
                <dependency>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-rs-client</artifactId>
                    <version>3.0.0</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>javax.ws.rs</groupId>
                    <artifactId>javax.ws.rs-api</artifactId>
                    <version>2.0-m16</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>cglib</groupId>
                    <artifactId>cglib-nodep</artifactId>
                    <version>2.2</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.glassfish.jersey.core</groupId>
                    <artifactId>jersey-client</artifactId>
                    <version>2.7</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.ebay.kernel</groupId>
                    <artifactId>uKernelCore</artifactId>
                    <version>2.0.451-nextgen-0.0.5</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.paypal.risk.identity</groupId>
                    <artifactId>rda-reader</artifactId>
                    <version>${project.version}</version>
                </dependency>
                <dependency>
					  <groupId>com.paypal.rti</groupId>
					  <artifactId>RTITestUtils</artifactId>
					  <version>0.0.38-SNAPSHOT</version>
				</dependency>
				<dependency>
					  <groupId>com.paypal.risk.identity</groupId>
					  <artifactId>utils</artifactId>
					  <version>3.3.19</version>
				</dependency>
				<dependency>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
					<version>6.8.7</version>
				</dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
